# mbzirc_task2

./: .gitignore  README.md
aero_dgripper/: CMakeLists.txt  package.xml
aero_dgripper/euslisp/: aero-dgripper-controller.l  test-ft-sensor-publisher.l  test-ft-sensor-service.l
aero_dgripper/launch/: aero_dgripper.launch
aero_dgripper/scripts/: FTPublisher.py  FTSensorService.py  seed_command.py
aero_dgripper/srv/: AeroFTSensor.srv
aero_utils/: CMakeLists.txt  package.xml
aero_utils/euslisp/: aero-arm-single-wrist-utils.l  aero-arm-utils.l  aero-servo-controller.l  aero-utils.l  demos.l  force-monitor.l  start-roseus-aero-arm-single-wrist.l  start-roseus-aero-arm.l  start-roseus-aero.l
aero_utils/launch/: aero_utils.launch  ground_publisher.launch  piksi.launch
aero_utils/script/: AeroServoController.py  debug_Aero.py  groundPublisher.py  seed_command.py  start_roseus_aero.sh  start_roseus_aero_arm.sh  start_roseus_aero_arm_single_wrist.sh
aero_utils/srv/: AeroServoController.srv
hrp2g_wheelbase/: CMakeLists.txt  README.md  package.xml
hrp2g_wheelbase/launch/: real_ugv.launch  rosserial.launch.bak
hrp2g_wheelbase/src/gopose/: goblin_gopose.cpp
hrp2g_wheelbase/src/teleop/: uav_teleop_joy.cpp
hrp2g_wheelbase/srv/: Gopose.srv
jsk_mbzirc_board/launch/: magnet.launch
jsk_mbzirc_board/scripts/: laser_board.py  serial_board.py
mbzirc_task2/: CHANGELOG.rst  CMakeLists.txt  package.xml
mbzirc_task2_network/: CMakeLists.txt  package.xml
mbzirc_task2_network/launch/: aero_remotepc.launch  aero_throttle.launch  aero_udp.launch  hrp2_remotepc.launch  hrp2_udp.launch  jsk_udp.launch  remotepc.launch
mbzirc_task2_network/msg/: AERO2Remote_LargeData.msg  AERO2Remote_SmallData.msg  AERO2Remote_Throttle_LargeData.msg  AERO2Remote_Throttle_SmallData.msg  HRP22Remote_LargeData.msg  HRP22Remote_SmallData.msg  Remote2AERO.msg  Remote_LargeData.msg
mbzirc_task2_utils/: CMakeLists.txt  image_throttle_nodelets.xml  package.xml
mbzirc_task2_utils/env-hooks/: 99.mbzirc_task2_utils.bash  99.mbzirc_task2_utils.zsh
mbzirc_task2_utils/rviz/: aero-perception-manual.rviz  aero-perception.rviz
mbzirc_task2_utils/scripts/: start-remotepc-processing.sh  zed-odom-util.py
valve_task/: CMakeLists.txt  package.xml
valve_task/euslisp/: aero-arm-test-wrench-movement-ik.l  aero-arm-test-wrench-movement-succeeded-points  aero-arm-turn-wrench-arm.l  aero-arm-turn-wrench-torso.l  aero-arm-turn-wrench-with-lower-body.l  aero-ps3joy-mbzirc-teleop.l  aero-test-wrench-movement-ik.l  aero-turn-wrench-with-lower-body.l  fit-wrench-to-shaft-aero.l  fit-wrench-to-shaft-upsidedown.l  fit-wrench-to-shaft.l  hrp2g-ps3joy-mbzirc-teleop.l  hrp2v-ps3joy-dynamixel-teleop.l  hrp2v-ps3joy-mbzirc-teleop.l  hrp2v-task2-main.l  hrp2v-turn-wrench.l  laser-panel-detector.l  start-roseus-aero-mbzirc.l  start-roseus-hrp2g-mbzirc.l  start-roseus-hrp2v.l  task2_state_machine.l  valve-task-params.l
valve_task/log/: 2016-12-20_fit-and-turn-wrench-exp
valve_task/models/: panel.l  task2arena-scene.l  wrench.l
valve_task/rviz/: aero.rviz
valve_task/scripts/: start_roseus_aero_mbzirc.sh  start_roseus_aero_mbzirc_byobu.sh  start_roseus_hrp2g_mbzirc.sh  task2_smach.py
