<?xml version="1.0"?>
<package>
  <name>mbzirc_task2_network</name>
  <version>0.0.0</version>
  <description>The mbzirc_task2_network package</description>

  <maintainer email="mbzirc-team@jsk.imi.i.u-tokyo.ac.jp">JSK </maintainer>

  <license>BSD</license>

  <url type="website">http://www.jsk.t.u-tokyo.ac.jp/</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>jsk_network_tools</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>message_runtime</build_depend>
  <build_depend>tf2_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <run_depend>jsk_network_tools</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>tf2_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>

  <export>
  </export>
</package>
