<?xml version="1.0"?>
<package>
  <name>mbzirc_task2_utils</name>
  <version>0.0.0</version>
  <description>The mbzirc_task2_utils package</description>

  <maintainer email="mizmizo@jsk.imi.i.u-tokyo.ac.jp">mizmizo</maintainer>


  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>jsk_tools</build_depend>
  <build_depend>mbzirc_task2_network</build_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>jsk_tools</run_depend>
  <run_depend>mbzirc_task2_network</run_depend>
  <run_depend>roscpp</run_depend>


  <export>
  </export>
</package>
