<?xml version="1.0"?>
<package>
  <name>mbzirc_task2_utils</name>
  <version>0.0.0</version>
  <description>The mbzirc_task2_utils package</description>

  <maintainer email="mizmizo@jsk.imi.i.u-tokyo.ac.jp">mizmizo</maintainer>


  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>jsk_tools</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>image_geometry</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>mbzirc_task2_network</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>nodelet_topic_tools</build_depend>
  <run_depend>jsk_tools</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>image_geometry</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>mbzirc_task2_network</run_depend>
  <run_depend>mbzirc_task2_network</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>nodelet_topic_tools</run_depend>


  <export>
    <nodelet plugin="${prefix}/image_throttle_nodelets.xml"/>
  </export>
</package>
